// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm /> renders as expected 1`] = `
<form
  className="iap-login-form"
  onSubmit={[Function]}
>
  <p
    className="iap-login-form__title"
  >
    Identifo
  </p>
  <Input
    Icon={null}
    errorMessage=""
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />
  <Input
    Icon={null}
    errorMessage=""
    name="password"
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value=""
  />
  <LoginButton
    loading={false}
    onClick={null}
  />
</form>
`;

exports[`<LoginForm /> renders as expected when error 1`] = `
<form
  className="iap-login-form"
  onSubmit={[Function]}
>
  <p
    className="iap-login-form__title"
  >
    Identifo
  </p>
  <LoginErrorMessage
    message="message"
    onClick={[Function]}
  />
  <Input
    Icon={null}
    errorMessage=""
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />
  <Input
    Icon={null}
    errorMessage=""
    name="password"
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value=""
  />
  <LoginButton
    loading={false}
    onClick={null}
  />
</form>
`;

exports[`<LoginForm /> renders as expected when signing in 1`] = `
<form
  className="iap-login-form"
  onSubmit={[Function]}
>
  <p
    className="iap-login-form__title"
  >
    Identifo
  </p>
  <Input
    Icon={null}
    errorMessage=""
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />
  <Input
    Icon={null}
    errorMessage=""
    name="password"
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value=""
  />
  <LoginButton
    loading={true}
    onClick={null}
  />
</form>
`;
